--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint",
     "prettier": "prettier --write ."
   },
+  "overrides": {
+    "semver": "^7.5.3"
+  },
   "dependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.6",
